<resources>
    <string name="app_name">AutoBatterySaver</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_switch">Switch</string>

    <string name="setting_time">Time</string>
    <string name="setting_start_time">Start time</string>
    <string name="setting_end_time">End time</string>
    <string name="default_start_time">24:00</string>
    <string name="setting_extra">Extra</string>
    <string name="setting_mode">Mode</string>
    <string name="mode_battery_saver">Battery saver</string>
    <string name="mode_airplane">Airplane</string>
    <string name="mode_both">Both</string>
    <string-array name="mode_array">
        <item>@string/mode_battery_saver</item>
        <item>@string/mode_airplane</item>
        <item>@string/mode_both</item>
    </string-array>
    <string name="setting_snooze">Snooze if device is active</string>
    <string name="setting_available_days">Available days</string>
    <string name="day_none">None</string>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>
    <string-array name="days_array">
        <item>@string/day_sunday</item>
        <item>@string/day_monday</item>
        <item>@string/day_tuesday</item>
        <item>@string/day_wednesday</item>
        <item>@string/day_thursday</item>
        <item>@string/day_friday</item>
        <item>@string/day_saturday</item>
    </string-array>
    <string name="short_day_monday">Mon</string>
    <string name="short_day_tuesday">Tue</string>
    <string name="short_day_wednesday">Wed</string>
    <string name="short_day_thursday">Thu</string>
    <string name="short_day_friday">Fri</string>
    <string name="short_day_saturday">Sat</string>
    <string name="short_day_sunday">Sun</string>
    <string-array name="short_days_array">
        <item>@string/short_day_sunday</item>
        <item>@string/short_day_monday</item>
        <item>@string/short_day_tuesday</item>
        <item>@string/short_day_wednesday</item>
        <item>@string/short_day_thursday</item>
        <item>@string/short_day_friday</item>
        <item>@string/short_day_saturday</item>
    </string-array>

    <string name="positive_button">@android:string/ok</string>
    <string name="negative_button">@android:string/cancel</string>
    <string name="mode_switch_dialog_title">Choose mode</string>
    <string name="days_choose_dialog_title">Available days</string>

    <!-- Service -->
    <string name="notification_title">Sleep detector is running</string>
    <string name="notification_content">This will exit if you go to sleep.</string>

</resources>
